add styles, cascading effects, rows to elements
co-authored-by: Ty Huard <thuard06@gmail.com>
co-authored-by: Ester Tataje <ester.tataje@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,16 @@ h1 {
 
 h2 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+  color: blue;
 }
-
-
+.profile {
+  margin: 10px;
+  border: 6px lightgray;
+  padding: 5px;
+  background-color: lightskyblue;
+  border-image: 5px solid black;
+}
+ p {
+   text-align: center;
+ }
